Data store setup complete

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^4.0.2"
+  },
+  "dependencies": {
+    "electron-store": "^2.0.0"
   }
 }
